# moose-dj

./: .pre-commit-config.yaml  LICENSE  README.md  manage.py  pyproject.toml  tasks.py
.github/workflows/: django-app.yml  package-docker.yml
moose_dj/: asgi.py  settings.py  urls.py  wsgi.py
news/: apps.py  models.py  tests.py
news/migrations/: 0001_initial.py
tests/: test_version.py
